<resources>
        <string name="app_name">EveryDayApp</string>
        <string name="slogan">협업을 더 편하게!</string>
        <string name="everyday_1">에브리데이!</string>
        <string name="everyday">에브리데이</string>
        <string name="ID">ID</string>
        <string name="PW">PW</string>
        <string name="TeamName">Team Name</string>
        <string name="login">로그인</string>
        <string name="signup">회원가입</string>
        <string name="name_HI">이름: 황일규</string>
        <string name="MBTI_ENFJ">MBTI:ENFJ</string>
        <string name="i_nice_meet">간단한 소개: 안녕하세요! 잘부탁드립니다.</string>
        <string name="post">게시물</string>
        <string name="hello"> 안녕하세요!</string>
        <string name="thanks"> 감사합니다.</string>
        <string name="teamname">조이름</string>
        <string name="github">github</string>
        <string name="slack">slacsk</string>
        <string name="programmers">programmers</string>
        <string name="notion">notion</string>
        <string name="익명">익명</string>
        <string name="글을입력해주세요">글을 입력해 주세요.</string>
        <string name="한마디">한마디</string>
        <string name="체크">체크</string>
        <string name="완료">완료</string>
        <string name="취소">취소</string>
        <string name="TeamName2">Team Name : </string>
        <string name="ID2">ID : </string>
        <string name="팀명을입력해주세요">팀명을 입력해주세요.</string>
        <string name="아이디를입력해주세요">아이디를 입력해주세요.</string>
        <string name="좌우명">좌우명 : </string>
        <string name="좌우명을입력해주세요">좌우명을 입력해주세요. </string>
        <string name="비밀번호를입력해주세요">비밀번호를 입력해주세요. </string>
        <string name="부끄럽조">부끄럽조</string>
        <string name="좋은아침">팀원분들 좋은 아침입니다! :)</string>
        <string name="글쓰기">글 쓰기</string>
        <string name="닉네임">닉네임</string>
        <string name="닉네임을입력하세요">닉네임을 입력하세요.</string>
        <string name="이름을입력하세요">이름을 입력하세요</string>
        <string name="MBTI를입력하세요">MBTI를 입력하세요</string>

</resources>