<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginPage"
    android:background="@drawable/orange">

    <ImageView
        android:id="@+id/rogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="370dp"
        android:layout_weight="1"
        android:src="@drawable/everycustom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        style="@style/font2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rogo" />

    <TextView
        android:id="@+id/everyday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/everyday_1"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan"
        style="@style/font2"/>

    <TextView
        android:id="@+id/textId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="200dp"
        android:text="@string/ID"
        android:textColor="@color/dark_gray"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/everyday"
        style="@style/font"/>

    <EditText
        android:id="@+id/editId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray"
        android:layout_marginStart="60dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textId" />

    <TextView
        android:id="@+id/textPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="200dp"
        android:text="@string/PW"
        android:textColor="@color/dark_gray"
        style="@style/font"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editId" />

    <EditText
        android:id="@+id/editPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray"
        android:layout_marginStart="60dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="60dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPw" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/red"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        style="@style/font"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPw" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/red"
        android:text="@string/signup"
        android:textColor="@color/white"
        style="@style/font"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>